@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-
-<!DOCTYPE ACTIONS SYSTEM "actions.dtd">
-
-<ACTIONS>
-	<ACTION NAME="version-check">
-		<CODE>
-			LatestVersionPlugin.doVersionCheck(view);
-		</CODE>
-	</ACTION>
-</ACTIONS>
