@@ -1,23 +1,0 @@
-<?xml version="1.0"?>
-<project name="LatestVersion"
-		 default="build">
-	<description>
-		This is an ant build.xml file for building the LatestVersion plugin for jEdit.
-	</description>
-
-	<property file="build.properties"/>
-	<property file="../build.properties"/>
-
-	<property name="jedit.install.dir"
-			  location="../../build" />
-	<property name="docs-proc.target"
-			  value="none" />
-
-	<property name="build.support"
-			  value="../../../build-support" />
-	<import file="${build.support}/plugin-build.xml" />
-
-	<selector id="packageFiles">
-		<filename name="LatestVersion.html" />
-	</selector>
-</project>
